# d3d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md  pylintrc  readthedocs.yaml  requirements.txt  setup.py
.github/workflows/: publish-conda.yml
conda/: build-config.yaml  build_linux_cpu.dockerfile  conda_build_config.yaml  env-dev-cpu.yaml  env-dev.dockerfile  env-dev.yaml  env.yaml  env_dev.yaml  meta.yaml
conda/cpu/: conda_build_config.yaml  meta.yaml
conda/cuda/: conda_build_config.yaml  meta.yaml
d3d/: CMakeLists.txt  __init__.py  abstraction.pxd  abstraction.py  abstraction.pyi  abstraction.pyx  benchmarks.py  benchmarks.pyi  benchmarks.pyx  common.h  dgal.pxd  dgal_wrap.h  geometry.hpp  geometry_binding.cpp  geometry_grad.hpp  profiler.py
d3d/box/: CMakeLists.txt  __init__.py  common.h  dist.cpp  dist.h  dist_cuda.cu  geometry.hpp  impl.cpp  iou.cpp  iou.h  iou_cuda.cu  nms.cpp  nms.h  nms_cuda.cu  utils.cpp  utils.cuh  utils.h
d3d/dataset/: README.md  __init__.py  base.py  zip.py
d3d/dataset/cadc/: __init__.py  loader.py  utils.py
d3d/dataset/kitti/: __init__.py  object.py  odometry.py  raw.py  tracking.py  utils.py
d3d/dataset/kitti360/: __init__.py  loader.py  utils.py
d3d/dataset/nuscenes/: __init__.py  constants.py  converter.py  loader.py
d3d/dataset/waymo/: __init__.py  converter.py  loader.py
d3d/io/: hdf5.py  lmdb.py  ros.py
d3d/math/: CMakeLists.txt  __init__.pxd  __init__.py  bessel.h  impl.cpp  math.cpp  math.cu  math.h
d3d/nms/: __init__.py  nms_cuda.cu
d3d/point/: CMakeLists.txt  __init__.py  atomics.cuh  impl.cpp  scatter.cpp  scatter.h  scatter_cuda.cu
d3d/track/: matcher.pyx
d3d/tracking/: CMakeLists.txt  __init__.py  filter.py  matcher.pxd  matcher.pyi  matcher.pyx  tracker.py
d3d/utils/: utils.cpp  voxel.py
d3d/vis/: __init__.py  image.py  pcl.py  serve_xviz.py  xviz.py
d3d/voxel/: CMakeLists.txt  __init__.py  impl.cpp  voxelize.cpp  voxelize.h
docs/: abstraction.md  conf.py  datasets.md  get_started.md  index.rst  requirements.txt  tracking.md
docs/apis/: abstraction.rst  benchmarks.rst  box.rst  dataset-kitti.rst  dataset-kitti360.rst  dataset-nuscenes.rst  dataset-waymo.rst  dataset.rst  math.rst  point.rst  tracking.rst  vis.rst  voxel.rst
examples/: dataset_viewer.py  requirements.txt
test/: test_abstraction.py  test_benchmark.py  test_box.py  test_dataset.py  test_geometry.py  test_math.py  test_point.py  test_tracking.py  test_voxel.py  voxel_data.npz
test/compare/: benchmark_riou.py  plot_riou.py
test/dump/: README.md
